--- a/public/index.html
+++ b/public/index.html
@@ -4,65 +4,70 @@
         <meta charset="utf-8" />
         <title>Socialab</title>
         <script src="//use.edgefonts.net/spicy-rice.js"></script> 
+        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/impress.css">
     </head>
     <body>
         <div id="impress">
-            <div id="socialab" class="step hide future veryBig word" data-x="0" data-y="0">
-                Socialab
+            <div id="socialab" class="step hide future main start" data-x="0" data-y="0" data-scale="4">
+                <div class="word">Socialab</div>
             </div>
-            <div id="gamification" class="step hide future big word" data-x="-180" data-y="-150">
+            <div id="gamification" class="step hide future main word" data-x="-1000" data-y="-500" data-scale="3">
                 Gamification
             </div>   
-            <div id="jeux" class="step hide future big word" data-x="-150" data-y="100">
+            <div id="jeux" class="step hide future main word" data-x="-500" data-y="420" data-scale="3">
                 Jeux
             </div>   
-            <div id="business" class="step hide future big word" data-x="410" data-y="-110">
+            <div id="business" class="step hide future main word" data-x="1200" data-y="-440" data-scale="3">
                 Marché
             </div>   
-            <div id="business" class="step hide future big word" data-x="-50" data-y="210">
+            <div id="business" class="step hide future main word" data-x="-200" data-y="760" data-scale="3">
                 Business
             </div>          
-            <div id="personnalisation" class="step hide future medium word" data-x="450" data-y="50">
+            <div id="personnalisation" class="step hide future main word" data-x="1360" data-y="200" data-scale="2">
                 Personnalisation
             </div>   
-            <div id="analytics" class="step hide future medium word" data-x="-450" data-y="110">
+            <div id="analytics" class="step hide future main word" data-x="-1600" data-y="440" data-scale="2">
                 Analytics
             </div>   
-            <div id="tarrif" class="step hide future big word" data-x="260" data-y="130">
+            <div id="tarrif" class="step hide future main word" data-x="1040" data-y="520" data-scale="3">
                 Tarrif
             </div>  
-            <div id="distribution" class="step hide future medium word" data-x="-350" data-y="20">
+            <div id="distribution" class="step hide future main word" data-x="-1400" data-y="100" data-scale="2">
                 Distribution
             </div>
 
-            <div class="step hide small word" data-x="510" data-y="110">Marketing</div>
-            <div class="step hide small word" data-x="510" data-y="210">Communication</div>
-            <div class="step hide small word" data-x="220" data-y="10">Réseau</div>
-            <div class="step hide small word" data-x="60" data-y="130">Social</div> 
-            <div class="step hide small word" data-x="-90" data-y="65">Information</div> 
+            <div class="step hide word" data-x="-600" data-y="590" data-scale="1.2">Marketing</div>
+            <div class="step hide word" data-x="400" data-y="200" data-scale="1.2">Communication</div>
+            <div class="step hide word" data-x="840" data-y="40" data-scale="1.2">Réseau</div>
+            <div class="step hide word" data-x="250" data-y="520" data-scale="1.2">Social</div> 
+            <div class="step hide word" data-x="-400" data-y="260" data-scale="1.2">Information</div> 
+            <div class="step hide word" data-x="-880" data-y="-60" data-scale="1.2">Actualité</div>
+            <div class="step hide word" data-x="0" data-y="-420" data-scale="1.2">Nouveauté</div> 
+            <div class="step hide word" data-x="200" data-y="-220" data-scale="1.2">Simple</div> 
+            <div class="step hide word" data-x="-1000" data-y="350" data-scale="1.2">Interface</div> 
 
-            <div class="step hide verySmall word" data-x="-200" data-y="15">Image</div>
-            <div class="step hide verySmall word" data-x="-190" data-y="40">Influence</div>
-            <div class="step hide verySmall word" data-x="-80" data-y="42">Intéraction</div>
-
-
-
-            <div class="step hide small word" data-x="200" data-y="95">Simple</div> 
-            <div class="step hide small word" data-x="200" data-y="95">Interface</div> 
-            <div class="step hide small word" data-x="200" data-y="95">Nouveauté</div> 
-            <div class="step hide small word" data-x="200" data-y="95">Actualité</div> 
-
-            <div class="step hide verySmall word" data-x="100" data-y="100">Génération</div>
-            <div class="step hide verySmall word" data-x="200" data-y="95">Création</div>
-            <div class="step hide verySmall word" data-x="200" data-y="95">Marque</div>
-            <div class="step hide verySmall word" data-x="200" data-y="95">Intégré</div>
-            <div class="step hide verySmall word" data-x="200" data-y="95">Entreprise</div>
-            <div class="step hide verySmall word" data-x="200" data-y="95">Participation</div>       
-            <div class="step hide verySmall word" data-x="200" data-y="95">Sollicitation</div>
+            <div class="step hide word" data-x="-800" data-y="60" data-scale="0.8">Image</div>
+            <div class="step hide word" data-x="-760" data-y="160" data-scale="0.8">Influence</div>
+            <div class="step hide word" data-x="-220" data-y="180" data-scale="0.8">Intéraction</div>
+            <div class="step hide word" data-x="-920" data-y="250" data-scale="0.8">Génération</div>
+            <div class="step hide word" data-x="70" data-y="300" data-scale="0.8">Sollicitation</div>
+            <div class="step hide word" data-x="-1450" data-y="300" data-scale="0.8">Participation</div>  
+            <div class="step hide word" data-x="-1300" data-y="220" data-scale="0.8">Entreprise</div>
+            <div class="step hide word" data-x="-1700" data-y="220" data-scale="0.8">Marque</div>
+            <div class="step hide word" data-x="-1000" data-y="450  " data-scale="0.8">Création</div>
+            <div class="step hide word" data-x="-950" data-y="530" data-scale="0.8">Intégré</div>
         </div>
 
         <script src="js/impress.js"></script>
-        <script>impress().init();</script>
+        <script>
+            impress().init();
+            
+            $(document.ready(function(){
+                $('.start').click(function(){
+
+                });
+            }));
+        </script>
     </body>
 </html>
