--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div id="impress">
-            <div id="socialab" class="step hide future main start" data-x="0" data-y="0" data-scale="4">
-                <div class="word">Socialab</div>
+            <div id="socialab" class="step hide future main first word" data-x="0" data-y="0" data-scale="4">
+                Socialab
             </div>
             <div id="gamification" class="step hide future main word" data-x="-1000" data-y="-500" data-scale="3">
                 Gamification
@@ -33,19 +33,29 @@
             <div id="tarrif" class="step hide future main word" data-x="1040" data-y="520" data-scale="3">
                 Tarrif
             </div>  
-            <div id="distribution" class="step hide future main word" data-x="-1400" data-y="100" data-scale="2">
+            <div id="distribution" class="step hide future main word last" data-x="-1400" data-y="100" data-scale="2">
                 Distribution
             </div>
 
             <div class="step hide word" data-x="-600" data-y="590" data-scale="1.2">Marketing</div>
             <div class="step hide word" data-x="400" data-y="200" data-scale="1.2">Communication</div>
             <div class="step hide word" data-x="840" data-y="40" data-scale="1.2">Réseau</div>
-            <div class="step hide word" data-x="250" data-y="520" data-scale="1.2">Social</div> 
+            <div class="step hide word" data-x="500" data-y="680" data-scale="1.2">Social</div> 
             <div class="step hide word" data-x="-400" data-y="260" data-scale="1.2">Information</div> 
             <div class="step hide word" data-x="-880" data-y="-60" data-scale="1.2">Actualité</div>
             <div class="step hide word" data-x="0" data-y="-420" data-scale="1.2">Nouveauté</div> 
             <div class="step hide word" data-x="200" data-y="-220" data-scale="1.2">Simple</div> 
-            <div class="step hide word" data-x="-1000" data-y="350" data-scale="1.2">Interface</div> 
+            <div class="step hide word" data-x="-1000" data-y="350" data-scale="1.2">Interface</div>  
+            <div class="step hide word" data-x="-20" data-y="480" data-scale="1.2">Diffusion</div> 
+            <div class="step hide word" data-x="420" data-y="400" data-scale="1.2">Communauté</div> 
+            <div class="step hide word" data-x="800" data-y="-250" data-scale="1.2">Compétition</div> 
+            <div class="step hide word" data-x="1000" data-y="350" data-scale="1.2">Stratégie</div> 
+            <div class="step hide word" data-x="-1300" data-y="580" data-scale="1.2">Gagnant</div> 
+            <div class="step hide word" data-x="-1600" data-y="-60" data-scale="1.2">Média</div> 
+            <div class="step hide word" data-x="-1000" data-y="-340" data-scale="1.2">Concours</div> 
+            <div class="step hide word" data-x="-400" data-y="-250" data-scale="1.2">Design</div> 
+            <div class="step hide word" data-x="1600" data-y="20" data-scale="1.2">Idée</div> 
+            <div class="step hide word" data-x="1400" data-y="-250" data-scale="1.2">Joueur</div>
 
             <div class="step hide word" data-x="-800" data-y="60" data-scale="0.8">Image</div>
             <div class="step hide word" data-x="-760" data-y="160" data-scale="0.8">Influence</div>
@@ -55,19 +65,48 @@
             <div class="step hide word" data-x="-1450" data-y="300" data-scale="0.8">Participation</div>  
             <div class="step hide word" data-x="-1300" data-y="220" data-scale="0.8">Entreprise</div>
             <div class="step hide word" data-x="-1700" data-y="220" data-scale="0.8">Marque</div>
-            <div class="step hide word" data-x="-1000" data-y="450  " data-scale="0.8">Création</div>
-            <div class="step hide word" data-x="-950" data-y="530" data-scale="0.8">Intégré</div>
+            <div class="step hide word" data-x="-1000" data-y="450" data-scale="0.8">Création</div>
+            <div class="step hide word" data-x="-950" data-y="530" data-scale="0.8">Intégrer</div>
+            <div class="step hide word" data-x="-50" data-y="380" data-scale="0.8">Conversion</div>
+            <div class="step hide word" data-x="450" data-y="310" data-scale="0.8">Qualifier</div>
+            <div class="step hide word" data-x="-100" data-y="580" data-scale="0.8">Divertissement</div>
+            <div class="step hide word" data-x="100" data-y="650" data-scale="0.8">Utilisateur</div>   
+            <div class="step hide word" data-x="500" data-y="500" data-scale="0.8">Gaming</div>
+            <div class="step hide word" data-x="400" data-y="575" data-scale="0.8">Récompenses</div>
+            <div class="step hide word" data-x="-1000" data-y="650" data-scale="0.8">Score</div>
+            <div class="step hide word" data-x="-800" data-y="730" data-scale="0.8">Concept</div>
+            <div class="step hide word" data-x="-600" data-y="-350" data-scale="0.8">Réussite</div>  
+            <div class="step hide word" data-x="-1250" data-y="-60" data-scale="0.8">Internet</div>
+            <div class="step hide word" data-x="-250" data-y="-150" data-scale="0.8">Jouer</div>   
+            <div class="step hide word" data-x="-1400" data-y="-160" data-scale="0.8">Système</div>    
+            <div class="step hide word" data-x="-1500" data-y="-260" data-scale="0.8">Digital</div>      
+            <div class="step hide word" data-x="-1400" data-y="-360" data-scale="0.8">Technologie</div>     
+            <div class="step hide word" data-x="-1200" data-y="-240" data-scale="0.8">Application</div>   
+            <div class="step hide word" data-x="-1100" data-y="-160" data-scale="0.8">App</div> 
+            <div class="step hide word" data-x="-300" data-y="-350" data-scale="0.8">Web</div> 
+            <div class="step hide word" data-x="-800" data-y="-160" data-scale="0.8">Challenge</div>   
+            <div class="step hide word" data-x="-800" data-y="-250" data-scale="0.8">Statistiques</div>   
+            <div class="step hide word" data-x="440" data-y="-230" data-scale="0.8">Quiz</div> 
+            <div class="step hide word" data-x="200" data-y="-330" data-scale="0.8">Performance</div>  
+            <div class="step hide word" data-x="-100" data-y="-250" data-scale="0.8">Rapidité</div> 
+            <div class="step hide word" data-x="-100" data-y="-540" data-scale="0.8">Innovation</div>   
+            <div class="step hide word" data-x="550" data-y="-350" data-scale="0.8">Fidélité</div>   
+            <div class="step hide word" data-x="550" data-y="-530" data-scale="0.8">Stabilité</div>  
+            <div class="step hide word" data-x="250" data-y="-533" data-scale="0.8">Evolution</div> 
+            <div class="step hide word" data-x="650" data-y="-150" data-scale="0.8">Service</div>  
+            <div class="step hide word" data-x="700" data-y="-60" data-scale="0.8">Outil</div>    
+            <div class="step hide word" data-x="1250" data-y="50" data-scale="0.8">Support</div>  
+            <div class="step hide word" data-x="1550" data-y="-120" data-scale="0.8">Equipe</div>  
+            <div class="step hide word" data-x="980" data-y="-65" data-scale="0.8">Relation</div>  
+            <div class="step hide word" data-x="1280" data-y="-55" data-scale="0.8">Client</div>  
+            <div class="step hide word" data-x="1220" data-y="-155" data-scale="0.8">Commerce</div> 
+            <div class="step hide word" data-x="550" data-y="-445" data-scale="0.8">Laboratoire</div>  
+            <div class="step hide word" data-x="900" data-y="-150" data-scale="0.8">Gain</div>                       
         </div>
 
         <script src="js/impress.js"></script>
         <script>
             impress().init();
-            
-            $(document.ready(function(){
-                $('.start').click(function(){
-
-                });
-            }));
         </script>
     </body>
 </html>
